--- a/index.html
+++ b/index.html
@@ -3,58 +3,45 @@ layout: default
 title: Home
 ---
 
-  <div class="col-xs-12 col-sm-8 col-md-9 home-wrap">
-    <h3>Recent Articles</h3>
+  <div class="col-xs-12 col-sm-9 home-wrap">
+    <div class="col-xs-12 category-bar">
+      <h4>Recent Articles |<span> The latests posts</span><span class="glyphicon glyphicon-chevron-right pull-right" aria-hidden="true"></span></h4>
+    </div>
     {% for post in site.posts limit:4 %}
-      <div class="col-xs-6 col-sm-4 col-md-3 article-cards">
+      <div class="col-xs-12 col-sm-6 col-md-3 article-cards bounce">
         <img src='{{ post.thumbnail }}' class="thumbnails">
         <span class="category">{{ post.categories }} </span>
         <h5> {{ post.title }}</h5>
         <span class="description">{{ post.description }}</span>
       </div>
     {% endfor %}
-
     <hr>
     <!-- REVIEWS -->
-    <div class="col-sm-3">
-      <h4>Reviews</h4>
-      <ul>
-      {% for post in site.posts %}
-        {% if post.categories contains 'reviews' %}
-          <li>{{ post.title }}</li>
-        {% endif %}
-      {% endfor %}
-      </ul>
+    <div class="col-xs-12 category-bar">
+      <h4>Reviews |<span> Products, courses, races, and more</span></h4>
     </div>
-    {% for post in site.posts %}
-      {% if post.categories contains 'reviews' %}
-        <div class="col-sm-3 article-cards">
-          <img src='{{ post.thumbnail }}' class="thumbnails">
-          <span class="category">{{ post.categories }} </span>
-          <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
-          <span class="description">{{ post.description }}</span>
-        </div>
-      {% endif %}
+    {% for post in site.categories.reviews limit:4 %}
+      <div class="col-xs-12 col-sm-6 col-md-3 article-cards">
+        <img src='{{ post.thumbnail }}' class="thumbnails">
+        <span class="category">{{ post.categories }} </span>
+        <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
+        <span class="description">{{ post.description }}</span>
+      </div>
     {% endfor %}
-
+    <div class="col-xs-12">
+      <p class="text-right">View all Recent Articles <span class="glyphicon glyphicon-chevron-right pull-right" aria-hidden="true"></span></p>
+    </div>
     <hr>
     <!-- RECIPES -->
-    <div class="col-sm-3">
-      <h4>Recipes</h4>
-      <ul>
-      {% for post in site.posts limit: 3 %}
-          <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-      {% endfor %}
-      </ul>
+    <div class="col-xs-12 category-bar">
+      <h4>Recipes |<span> How to eat well, how to eat bad</span></h4>
     </div>
-    {% for post in site.posts limit: 3  %}
-      {% if post.categories contains 'recipes' %}
-        <div class="col-sm-3 article-cards">
-          <img src='{{ post.thumbnail }}' class="thumbnails">
-          <span class="category">{{ post.categories }} </span>
-          <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
-          <span class="description">{{ post.description }}</span>
-        </div>
-      {% endif %}
+    {% for post in site.categories.recipes limit: 4 %}
+      <div class="col-xs-12 col-sm-6 col-md-3 article-cards">
+        <img src='{{ post.thumbnail }}' class="thumbnails">
+        <span class="category">{{ post.categories }} </span>
+        <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
+        <span class="description">{{ post.description }}</span>
+      </div>
     {% endfor %}
   </div>
