--- a/index.html
+++ b/index.html
@@ -2,46 +2,85 @@
 layout: default
 title: Home
 ---
+<p>
+  llalala
+</p>
+<div class="col-xs-12 home-wrap">
+  {% for post in site.posts limit:10 %}
+    <div class="clearfix col-xs-6 col-sm-3 col-md-2 article-cards recent-articles">
+      <img src='{{ post.thumbnail }}' class="thumbnails">
+      <span class="category">{{ post.categories }} </span>
+      <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
+    </div>
+  {% endfor %}
 
-  <div class="col-xs-12 col-sm-9 home-wrap">
-    <div class="col-xs-12 category-bar">
-      <h4>Recent Articles |<span> The latests posts</span><span class="glyphicon glyphicon-chevron-right pull-right" aria-hidden="true"></span></h4>
+  <div class="col-xs-12 section-divider clearfix">
+    <div class="col-xs-12 col-sm-4 style"></div>
+    <div class="col-xs-12 col-sm-4">
+      <h1 class="special-font">Categories</h1>
     </div>
-    {% for post in site.posts limit:4 %}
-      <div class="col-xs-12 col-sm-6 col-md-3 article-cards bounce">
-        <img src='{{ post.thumbnail }}' class="thumbnails">
-        <span class="category">{{ post.categories }} </span>
-        <h5> {{ post.title }}</h5>
-        <span class="description">{{ post.description }}</span>
-      </div>
-    {% endfor %}
-    <hr>
-    <!-- REVIEWS -->
-    <div class="col-xs-12 category-bar">
-      <h4>Reviews |<span> Products, courses, races, and more</span></h4>
-    </div>
-    {% for post in site.categories.reviews limit:4 %}
-      <div class="col-xs-12 col-sm-6 col-md-3 article-cards">
-        <img src='{{ post.thumbnail }}' class="thumbnails">
-        <span class="category">{{ post.categories }} </span>
-        <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
-        <span class="description">{{ post.description }}</span>
-      </div>
-    {% endfor %}
-    <div class="col-xs-12">
-      <p class="text-right">View all Recent Articles <span class="glyphicon glyphicon-chevron-right pull-right" aria-hidden="true"></span></p>
-    </div>
-    <hr>
-    <!-- RECIPES -->
-    <div class="col-xs-12 category-bar">
-      <h4>Recipes |<span> How to eat well, how to eat bad</span></h4>
-    </div>
-    {% for post in site.categories.recipes limit: 4 %}
-      <div class="col-xs-12 col-sm-6 col-md-3 article-cards">
-        <img src='{{ post.thumbnail }}' class="thumbnails">
-        <span class="category">{{ post.categories }} </span>
-        <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
-        <span class="description">{{ post.description }}</span>
-      </div>
-    {% endfor %}
+    <div class="col-xs-12 col-sm-4 style"></div>
   </div>
+
+  <!-- Advice, multi-column section -->
+  <div class="col-xs-12 col-sm-6 half-section half-section-left">
+    <div class="col-xs-12 category-bar">
+      <h3>Advice</h3>
+    </div>
+    {% for post in site.categories.advice limit:2 %}
+      <div class="col-xs-6 article-cards">
+        <img src='{{ post.thumbnail }}' class="thumbnails">
+        <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
+        <span class="date">{{ post.date | date: '%B %d, %Y' }}</span>
+      </div>
+    {% endfor %}
+    <!-- Create the two "text-only" columns
+      One will have <hr>, the other won't -->
+    <div class="col-xs-12 col-sm-6 article-cards clearfix">
+      <hr>
+    {% for post in site.categories.advice limit:2 %}
+        <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
+        <span class="date">{{ post.date | date: '%B %d, %Y' }}</span>
+        <br>
+    {% endfor %}
+    </div>
+    <div class="ol-xs-12 col-sm-6 article-cards push-down">
+    {% for post in site.categories.advice limit:2 %}
+        <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
+        <span class="date">{{ post.date | date: '%B %d, %Y' }}</span>
+        <br>
+    {% endfor %}
+    </div>
+  </div>
+
+  <!-- Recipes, multi-column section -->
+  <div class="col-xs-12 col-sm-6 half-section half-section-right">
+    <div class="col-xs-12 category-bar">
+      <h3>Recipes</h3>
+    </div>
+    {% for post in site.categories.recipes limit:2 %}
+      <div class="clearfix col-xs-6 article-cards">
+        <img src='{{ post.thumbnail }}' class="thumbnails">
+        <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
+        <span class="date">{{ post.date | date: '%B %d, %Y' }}</span>
+      </div>
+    {% endfor %}
+    <!-- Create the two "text-only" columns
+      One will have <hr>, the other won't -->
+    <div class="clearfix ol-xs-12 col-sm-6 article-cards">
+      <hr>
+    {% for post in site.categories.recipes limit:2 %}
+        <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
+        <span class="date">{{ post.date | date: '%B %d, %Y' }}</span>
+        <br>
+    {% endfor %}
+    </div>
+    <div class="clearfix ol-xs-12 col-sm-6 article-cards push-down">
+    {% for post in site.categories.recipes limit:2 %}
+        <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
+        <span class="date">{{ post.date | date: '%B %d, %Y' }}</span>
+        <br>
+    {% endfor %}
+    </div>
+  </div>
+</div>
