post and pages styling, removed sidebar, changed theme colors

--- a/about.html
+++ b/about.html
@@ -3,4 +3,12 @@ layout: pages
 title: About
 ---
 
-<h1>Test Test Test About</h1>
+<div class="col-xs-12">
+  <h1>{{ page.title }}</h1>
+  <span class='meta'>all you need to know</span>
+  <hr>
+  <h3>How It's Built</h3>
+  <p>This theme is built using the power of Bootstrap, Jekyll, Gulp, and preprocessors like Jade and Sass/Less.</p>
+  <br>
+  <p>Download gulp to your computer and in the terminal navigate to your site directory. Simply command "gulp" and it will take care of everything from compiling your Sass files to auto-refreshing your browser and local server</p>
+</div>
