loops for category pages, set up nav and about page

--- a/index.html
+++ b/index.html
@@ -3,47 +3,42 @@ layout: default
 title: Home
 ---
 <div class="col-xs-12 home-wrap">
-
   <div id="recent-articles-container">
   {% for post in site.posts limit:10 %}
     <div class="clearfix col-xs-12 col-sm-3 col-md-2 article-cards recent-articles">
-      <img src='{{ post.thumbnail }}' class="thumbnails">
+      <a href="{{ post.url }}"><img src='{{ post.thumbnail }}' class="thumbnails"></a>
       <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
       <span class="meta">{{ post.categories }} </span>
     </div>
   {% endfor %}
   </div>
 
-  <!-- <div class="col-xs-12 section-divider clearfix">
-    <div class="col-xs-12 col-sm-4 style"></div>
-    <div class="col-xs-12 col-sm-4">
-      <h1 class="special-font">Categories</h1>
-    </div>
-    <div class="col-xs-12 col-sm-4 style"></div>
-  </div> -->
   <hr class="col-xs-12">
-  <!-- Advice, multi-column section -->
+
+  <!-- Begin Multi-column sections -->
   <div class="col-xs-12 col-sm-6 half-section half-section-left clearfix">
     <div class="col-xs-12 category-bar">
       <h3>Advice</h3>
     </div>
+    <!-- Liquid loop that populates posts in a given category -->
     {% for post in site.categories.advice limit:2 %}
       <div class="col-xs-12 col-sm-6 article-cards">
-        <img src='{{ post.thumbnail }}' class="thumbnails">
+        <a href="{{ post.url }}"><img src='{{ post.thumbnail }}' class="thumbnails"></a>
         <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
         <span class="meta">{{ post.date | date_to_string }}</span>
       </div>
     {% endfor %}
-    <!-- Create the two "text-only" columns
-      One will have <hr>, the other won't -->
+    <!-- These next two columns will only show the title and date for each post. The value is currently set to list 2 stories in each column. -->
     <div class="col-xs-12 col-sm-6 article-cards clearfix">
       <hr>
+    <!-- If you want to add more posts to each column change the 'limit' value, and adjust the 'offset' value accordingly -->
     {% for post in site.categories.advice limit:2 offset:2 %}
         <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
         <span class="meta">{{ post.date | date_to_string }}</span>
         <br>
     {% endfor %}
     </div>
+    <!-- Second text-only column, this one has no <hr> on top of it, for silly styling purposes. The offset value makes sure that we're not repeating posts listed in each category -->
     <div class="col-xs-12 col-sm-6 article-cards push-down">
     {% for post in site.categories.advice limit:2 offset:4 %}
         <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
@@ -53,20 +48,21 @@ title: Home
     </div>
   </div>
 
-  <!-- Recipes, multi-column section -->
+  <!-- Same concept as above, just for a different category -->
   <div class="col-xs-12 col-sm-6 half-section half-section-left">
+
     <div class="col-xs-12 category-bar">
       <h3>Recipes</h3>
     </div>
     {% for post in site.categories.recipes limit:2 %}
       <div class="col-xs-12 col-sm-6 article-cards">
-        <img src='{{ post.thumbnail }}' class="thumbnails">
+        <a href="{{ post.url }}"><img src='{{ post.thumbnail }}' class="thumbnails"></a>
         <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
         <span class="meta">{{ post.date | date_to_string }}</span>
       </div>
     {% endfor %}
-    <!-- Create the two "text-only" columns
-      One will have <hr>, the other won't -->
+
+    <!-- Text-only column left -->
     <div class="col-xs-12 col-sm-6 article-cards clearfix">
       <hr>
     {% for post in site.categories.recipes limit:2 offset:2 %}
@@ -75,6 +71,8 @@ title: Home
         <br>
     {% endfor %}
     </div>
+
+      <!-- Text-only column right -->
     <div class="col-xs-12 col-sm-6 article-cards push-down">
     {% for post in site.categories.recipes limit:2 offset:4 %}
         <h5><a href="{{ post.url }}">{{ post.title }}</a></h5>
