updated config, linked social media to footer, prep for launch

--- a/about.html
+++ b/about.html
@@ -10,5 +10,6 @@ title: About
   <h3>How It's Built</h3>
   <p>This theme is built using the power of Bootstrap, Jekyll, Gulp, and preprocessors like Jade and Sass/Less.</p>
   <br>
-  <p>Download gulp to your computer and in the terminal navigate to your site directory. Simply command "gulp" and it will take care of everything from compiling your Sass files to auto-refreshing your browser and local server</p>
+  <strong>Check out any of the posts on this demo site for instructions on use.</strong>
+
 </div>
